# wgpu_3d_renderer

./: Cargo.toml  index.html
src/: lib.rs  main.rs  rendering.rs  shader.wgsl  texture.rs
src/rendering/: app.rs  camera.rs  state.rs
