[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "26.0.1"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
anyhow = "1.0.98"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false	# Do not use rayon; wasm doesnt support threading
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
	"Document",
	"Window",
	"Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
